# cnake

./: .gitignore  CMakeLists.txt  README.md
examples/: test_number.cpp
src/: cnake.cpp  cnake.h
